--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "convert-array-to-csv": "^2.0.0",
     "export-to-csv": "^0.2.1",
-    "moralis": "0.0.135"
+    "moralis": "0.0.135",
+    "qs": "^6.10.1"
   }
 }
